--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/main.css">
     <!-- scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
+    <script src="./js/cuadrados.js"></script>
     <script src="./js//main.js"></script>
     <!--Fin de scripts-->
     <title>Juego para Simbiocreación</title>
 </head>
 <body>
-    
+    <main id="juego">
+
+    </main>
 </body>
 </html>
