--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
         <div class="row d-flex justify-content-center mt-5">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="text-center">Lista de Clases</h1>
+                        <h1 class="text-center">SimbioGame</h1>
                     </div>
                     <div class="card-body">
                         <div class="list-group" >
